refactor(config): remove servlet context-path and rename user table to snake_case